# python-sokoban

./: main.py  pyproject.toml  readme.md
data/: 1.lvl  2.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  instructions.txt
python_sokoban/: application.py  color.py  entity.py  level.py  options_list.py  point.py  state.py  tile.py
python_sokoban/entities/: boulder.py  exit.py  pit.py  player.py  wall.py
python_sokoban/states/: game.py  instructions.py  stage_select.py  title.py  victory.py
run/: format  python-sokoban
tests/: test_example.py  test_sample.py
